--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "au-cv",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://badriev.github.io/au-cv",
   "type": "module",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "vite --port 3000",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
@@ -28,6 +31,7 @@
     "eslint": "^9.11.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
+    "gh-pages": "^6.2.0",
     "globals": "^15.9.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.7.0",
